implement hashing in ObjectDatabase